# qwen-newbi-app

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  DOCS_INDEX.md  Dockerfile  GETTING_STARTED.md  MCP_INTEGRATION_GUIDE.md  PROJECT_STATUS.md  RAG_INTEGRATION_PLAN.md  README.md  TRITON_GUIDE.md  TRITON_INTEGRATION_SUMMARY.md  TRITON_PERFORMANCE.md  TRITON_QUICKSTART.md  _DEPRECATED_RAG_INTEGRATION_PLAN.md  app.py  docker-compose.yml  model_server.py  requirements.txt  start.sh  test_memory.py
agent/client/: triton_client.py
agent/client/extensions/vscode/: .gitignore  .vscodeignore  README.md  package-lock.json  package.json  tsconfig.json
agent/client/mcp/: Cargo.toml
agent/client/mcp/src/: main.rs
agent/client/mcp_python/: IMPLEMENTATION_SUMMARY.md  README.md  TEST_PODS.md  mcp_client.py  requirements.txt  test_pods.py
agent/memory/: __init__.py  chunking.py  config.py  embeddings.py  retriever.py
agent/memory/k8s2vector/sync-driver/: Cargo.toml  README.md
agent/memory/k8s2vector/sync-driver/src/: main.rs
agent/memory/k8s2vector/sync-driver/src/controllers/: k8s_controllers.rs  mod.rs  resources_chunker.rs
agent/memory/legacy/: __init__.py  config.py  embeddings.py  retriever.py  vector_store.py
agent/serving/fastapi/src/: __init__.py  model_loader.py
agent/serving/triton/docker/: Dockerfile.triton  README.md  nginx.conf  requirements-triton.txt  start-services.sh
docs/: K8S_SYNC_DRIVER_GUIDE.md  VLM2VEC_EMBEDDING_GUIDE.md
src/: __init__.py
src/serving/: inference_engine.py  model_loader.py  model_server.py
(+4 files in other folders)
