[package]
name = "mcp-tool-discovery"
version = "0.2.0"
edition = "2021"

[dependencies]
rmcp = { version = "0.14.0", features = ["server", "client", "transport-io"] }
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros", "time"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "blocking"] }
colored = "2.1"
chrono = "0.4"
anyhow = "1.0"
regex = "1.10"