[package]
name = "k8s2vector-sync-driver"
version = "0.1.0"
edition = "2021"

[dependencies]
kube = { version = "3.0.1", features = ["runtime", "client"] }
k8s-openapi = { version = "0.27.0", features = ["v1_31"] }
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
qdrant-client = "1.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tracing = "0.1"
tracing-subscriber = "0.3"